# nc-stein-2027-tax-proposals

./: .gitignore  Makefile  README.md  baseline_adjustments.json  plan.yaml  pyproject.toml  reform.json
frontend/: next.config.js  package.json  vercel.json
frontend/__tests__/: AggregateImpact.test.tsx
frontend/app/: layout.tsx  robots.ts  sitemap.ts
frontend/app/(shell)/: page.tsx
frontend/components/: AggregateImpact.tsx  CongressionalDistrictImpact.tsx  DynamicDistrictMap.tsx  ImpactAnalysis.tsx  MapTypeToggle.tsx  PolicyOverview.tsx  USDistrictChoroplethMap.tsx
frontend/hooks/: useAggregateImpact.ts
frontend/lib/: api.ts  household.ts  types.ts
frontend/public/data/: congressional_districts.csv  distributional_impact.csv  income_brackets.csv  metrics.csv  provision_breakdown.csv  winners_losers.csv
nc_tax_calc/: __init__.py  household.py  microsimulation.py  reforms.py
scripts/: _pipeline_worker.py  compute_impacts.py  generate_district_csv.py  modal_district_pipeline.py  modal_pipeline.py  pipeline.py
tests/: __init__.py  test_household.py  test_reforms.py
