[project]
name = "nc-stein-2027-tax-proposals"
version = "1.0.0"
description = "NC Gov. Stein FY2026-27 tax proposals calculator and data pipeline (maintain 3.99% rate, raise standard deduction, refundable Working Families Tax Credit, refundable CDCC)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "policyengine-us>=1.150.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["nc_tax_calc"]
